--- a/T1 SL.ipynb
+++ b/T1 SL.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "## GRIP TASK: Spark Foundation-April 2023 (Data Science and Business Analytics Intern)\n",
     "## Name: Pranshu Singh\n",
-    "Task 1: Prediction using Supervised Learning"
+    "Task 1: Prediction using Supervised Learning ML"
    ]
   },
   {
@@ -166,6 +166,7 @@
     "#data.shape\n",
     "#data.describe()\n",
     "#data.isnull().sum()\n",
+    "#data.columns\n",
     "data.info()"
    ]
   },
