--- a/T4 Terrorism.ipynb
+++ b/T4 Terrorism.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## GRIP TASK: Spark Foundation-April 2023 (Data Science and Business Analytics Intern)\n",
+    "## Name: Pranshu Singh\n",
+    "Task 4: Exploratory Data Analysis - Terrorism"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
