--- a/T1 SL.ipynb
+++ b/T1 SL.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "* 1 - Importing the dataset\n",
     "* 2 - Visualizing the dataset\n",
-    "* 3 - Preparation Data\n",
+    "* 3 - Preparing Data\n",
     "* 4 - Training of Model\n",
     "* 5 - Visualizing the model\n",
     "* 6 - Making predcitions\n",
@@ -524,6 +524,19 @@
     "print('Root Mean Squared Error:', np.sqrt(metrics.mean_absolute_error(y_test, y_predict)))\n",
     "print('Slope of Regression Line', reg.coef_)\n",
     "print('Slope of Regression Line', reg.intercept_)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusion:\n",
+    " Based on testing data ( [[8.9][2.7][6.9][3.8][1.1]] ), the predicted percentages of these students are---\n",
+    "Predicting the Scores:\n",
+    "[88.21139357 28.71845267 69.02012231 39.27365186 13.36543566]\n",
+    "\n",
+    "Therefore, if the student studies for 9.25 hours a day, then his predicted score would be 93.96877495215878."
    ]
   },
   {
