and t4 updates & t6 progress

--- a/T3 Retail.ipynb
+++ b/T3 Retail.ipynb
@@ -11,11 +11,609 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this task, as a business manager, we need to find out the weak areas where you can work to make more profit & business problems we can derive by exploring the data using ‘Exploratory Data Analysis’ on dataset ‘SampleSuperstore’.\n",
+    "### Steps:\n",
+    "\n",
+    "* 1 - Importing the dataset\n",
+    "* 2 - Visualizing the dataset\n",
+    "* 3 - Preparing Data\n",
+    "* 4 - Finding Optimum number of Clusters\n",
+    "* 5 - Applying KMeans on data\n",
+    "* 6 - Visualizing the Clusters formed"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1 - Importing the dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as num\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as mpl\n",
+    "import seaborn as sns\n",
+    "%matplotlib inline\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ship Mode</th>\n",
+       "      <th>Segment</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>City</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Postal Code</th>\n",
+       "      <th>Region</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Sub-Category</th>\n",
+       "      <th>Sales</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>Discount</th>\n",
+       "      <th>Profit</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Second Class</td>\n",
+       "      <td>Consumer</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Henderson</td>\n",
+       "      <td>Kentucky</td>\n",
+       "      <td>42420</td>\n",
+       "      <td>South</td>\n",
+       "      <td>Furniture</td>\n",
+       "      <td>Bookcases</td>\n",
+       "      <td>261.9600</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>41.9136</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Second Class</td>\n",
+       "      <td>Consumer</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Henderson</td>\n",
+       "      <td>Kentucky</td>\n",
+       "      <td>42420</td>\n",
+       "      <td>South</td>\n",
+       "      <td>Furniture</td>\n",
+       "      <td>Chairs</td>\n",
+       "      <td>731.9400</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>219.5820</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Second Class</td>\n",
+       "      <td>Corporate</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Los Angeles</td>\n",
+       "      <td>California</td>\n",
+       "      <td>90036</td>\n",
+       "      <td>West</td>\n",
+       "      <td>Office Supplies</td>\n",
+       "      <td>Labels</td>\n",
+       "      <td>14.6200</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>6.8714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Standard Class</td>\n",
+       "      <td>Consumer</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Fort Lauderdale</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>33311</td>\n",
+       "      <td>South</td>\n",
+       "      <td>Furniture</td>\n",
+       "      <td>Tables</td>\n",
+       "      <td>957.5775</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.45</td>\n",
+       "      <td>-383.0310</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Standard Class</td>\n",
+       "      <td>Consumer</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Fort Lauderdale</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>33311</td>\n",
+       "      <td>South</td>\n",
+       "      <td>Office Supplies</td>\n",
+       "      <td>Storage</td>\n",
+       "      <td>22.3680</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>2.5164</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Ship Mode    Segment        Country             City       State   \n",
+       "0    Second Class   Consumer  United States        Henderson    Kentucky  \\\n",
+       "1    Second Class   Consumer  United States        Henderson    Kentucky   \n",
+       "2    Second Class  Corporate  United States      Los Angeles  California   \n",
+       "3  Standard Class   Consumer  United States  Fort Lauderdale     Florida   \n",
+       "4  Standard Class   Consumer  United States  Fort Lauderdale     Florida   \n",
+       "\n",
+       "   Postal Code Region         Category Sub-Category     Sales  Quantity   \n",
+       "0        42420  South        Furniture    Bookcases  261.9600         2  \\\n",
+       "1        42420  South        Furniture       Chairs  731.9400         3   \n",
+       "2        90036   West  Office Supplies       Labels   14.6200         2   \n",
+       "3        33311  South        Furniture       Tables  957.5775         5   \n",
+       "4        33311  South  Office Supplies      Storage   22.3680         2   \n",
+       "\n",
+       "   Discount    Profit  \n",
+       "0      0.00   41.9136  \n",
+       "1      0.00  219.5820  \n",
+       "2      0.00    6.8714  \n",
+       "3      0.45 -383.0310  \n",
+       "4      0.20    2.5164  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "store_data = pd.read_csv(\"T3_data.csv\")\n",
+    "store_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Ship Mode', 'Segment', 'Country', 'City', 'State', 'Postal Code',\n",
+       "       'Region', 'Category', 'Sub-Category', 'Sales', 'Quantity', 'Discount',\n",
+       "       'Profit'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "store_data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "store_data.duplicated().sum()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> There total 17 duplicate data items, so we remove it for the dataset \"store_data\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(9977, 13)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "store_data.drop_duplicates().shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ship Mode       0\n",
+       "Segment         0\n",
+       "Country         0\n",
+       "City            0\n",
+       "State           0\n",
+       "Postal Code     0\n",
+       "Region          0\n",
+       "Category        0\n",
+       "Sub-Category    0\n",
+       "Sales           0\n",
+       "Quantity        0\n",
+       "Discount        0\n",
+       "Profit          0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "store_data.isnull().sum()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> As per above data we can conclude that \"store_data\" does not have any null data. That means we can work on the dataset now as there is no ambigious data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Postal Code</th>\n",
+       "      <th>Sales</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>Discount</th>\n",
+       "      <th>Profit</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>9994.000000</td>\n",
+       "      <td>9994.000000</td>\n",
+       "      <td>9994.000000</td>\n",
+       "      <td>9994.000000</td>\n",
+       "      <td>9994.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>55190.379428</td>\n",
+       "      <td>229.858001</td>\n",
+       "      <td>3.789574</td>\n",
+       "      <td>0.156203</td>\n",
+       "      <td>28.656896</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>32063.693350</td>\n",
+       "      <td>623.245101</td>\n",
+       "      <td>2.225110</td>\n",
+       "      <td>0.206452</td>\n",
+       "      <td>234.260108</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1040.000000</td>\n",
+       "      <td>0.444000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-6599.978000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>23223.000000</td>\n",
+       "      <td>17.280000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.728750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>56430.500000</td>\n",
+       "      <td>54.490000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>0.200000</td>\n",
+       "      <td>8.666500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>90008.000000</td>\n",
+       "      <td>209.940000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>0.200000</td>\n",
+       "      <td>29.364000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>99301.000000</td>\n",
+       "      <td>22638.480000</td>\n",
+       "      <td>14.000000</td>\n",
+       "      <td>0.800000</td>\n",
+       "      <td>8399.976000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Postal Code         Sales     Quantity     Discount       Profit\n",
+       "count   9994.000000   9994.000000  9994.000000  9994.000000  9994.000000\n",
+       "mean   55190.379428    229.858001     3.789574     0.156203    28.656896\n",
+       "std    32063.693350    623.245101     2.225110     0.206452   234.260108\n",
+       "min     1040.000000      0.444000     1.000000     0.000000 -6599.978000\n",
+       "25%    23223.000000     17.280000     2.000000     0.000000     1.728750\n",
+       "50%    56430.500000     54.490000     3.000000     0.200000     8.666500\n",
+       "75%    90008.000000    209.940000     5.000000     0.200000    29.364000\n",
+       "max    99301.000000  22638.480000    14.000000     0.800000  8399.976000"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "store_data.describe()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusion:\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Suggestions:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Thank you!"
+   ]
   }
  ],
  "metadata": {
@@ -25,8 +623,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.2 (tags/v3.11.2:878ead1, Feb  7 2023, 16:38:35) [MSC v.1934 64 bit (AMD64)]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.2"
   },
   "orig_nbformat": 4,
   "vscode": {
