--- a/T3 Retail.ipynb
+++ b/T3 Retail.ipynb
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> In this task, as a business manager, we need to find out the weak areas where you can work to make more profit & business problems we can derive by exploring the data using ‘Exploratory Data Analysis’ on dataset ‘SaplteSuperstore’.\n",
+    "> In this task, as a business manager, we need to find out the weak areas where you can work to make more profit & business problems we can derive by exploring the data using ‘Exploratory Data Analysis’ on dataset ‘SampleSuperstore’.\n",
     "### Steps:\n",
     "\n",
     "* 1 - Importing the dataset\n",
@@ -997,11 +997,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
@@ -1514,7 +1509,7 @@
     "### Suggestions:\n",
     "* States like California, New York have highest deals and profit so, providing some discount would increase the sales.\n",
     "* We should limit sales of furniture and increase that of technology and office suppliers as furniture has very less profit as compared to sales.\n",
-    "* Considering the sub-categories sales of tables should be minimized.\n",
+    "* Keeping discount rate below 30%, as it declines profit if its more than 30% but profit may be increased if catogories like technology with high marked price are given discount between 0 to 50%.\n",
     "* Increase sales more in the east as profit is more.\n",
     "* We should concentrate on the states like 'New York' and 'California' to make more profits.\n",
     "* Cities like New York City, Los Angles & Philadelphia have most sales so we can give more discount to increase the sales.\n",
