--- a/T2 UL.ipynb
+++ b/T2 UL.ipynb
@@ -516,7 +516,7 @@
    ],
    "source": [
     "\n",
-    "sns.set_style('whitegrid')   ### Sets grid style\n",
+    "sns.set_style('whitegrid')   # Sets grid style\n",
     "sns.pairplot(data_with_clusters,hue = 'Cluster')"
    ]
   },
